--- a/start.html
+++ b/start.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Mock webstore school project">
     <meta name="author" content="Nackademin JAVAD23 Group 2">
     <title>Group 2 Webstore</title>
+    <link rel="shortcut icon" href="favicon.ico" type="favicon.ico">
     <link rel="stylesheet" href="css/bootstrap-quartz-group2.css">
 </head>
 <body>
