--- a/html/beställning.html
+++ b/html/beställning.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beställningsformulär</title>
-  <link rel="stylesheet" href="../style.css/bootstrap.css">
-  <link rel="stylesheet" href="../style.css/custom.css">
-  <link rel="stylesheet" href="../style.css/style.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/custom.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
@@ -79,7 +79,7 @@
       </div>
     </div>
   </div>
-  <script src="../script/script.js"></script>
+  <script src="../js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
