--- a/html/om-oss.html
+++ b/html/om-oss.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om oss</title>
-    <link rel="stylesheet" href="../style.css/bootstrap.css">
-    <link rel="stylesheet" href="../style.css/custom.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/custom.css">
 </head>
 
 <body>
