--- a/html/produkter.html
+++ b/html/produkter.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Webbshop - Produkter</title>
-  <link rel="stylesheet" href="../style.css/bootstrap.css">
-  <link rel="stylesheet" href="../style.css/custom.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/custom.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <script src="../script/script.js"></script>
+  <script src="../js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
