fixes product image ratio

--- a/html/produkter.html
+++ b/html/produkter.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="../favicon.ico" type="favicon.ico">
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/custom.css">
+  <link rel="stylesheet" href="../css/product.css">
 </head>
 
 <body>
@@ -27,8 +28,7 @@
 
     <!-- Produkerna listas här -->
     <h2 id="product-page">Produkter</h2>
-    <div class="row" id="product-list">
-    </div>
+    <div class="row" id="product-list"></div>
   </div>
 
   <script src="../js/script.js"></script>
