--- a/html/produkter.html
+++ b/html/produkter.html
@@ -11,20 +11,32 @@
 </head>
 
 <body>
-  <div class="container pt-5">
-    <!-- Navbar -->
-    <nav class="navbar navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../html/home-page.html">Webbshop</a>
+    <nav class="navbar navbar-expand-sm navbar-dark">
+      <div class="container-fluid"> 
+          <a class="navbar-brand" href="home-page.html"><img src="/favicon.ico" alt="Logo" height="80"></a>
+  
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="home-page.html">Hem</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="produkter.html">Produkter</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="om-oss.html">Om oss</a>
+                </li>
+              </ul>
+  
       </div>
-    </nav>
-    <!-- Meny -->
-    <div class="d-flex justify-content-center align-items-center">
-      <h4 class="menu-item mx-4"><a href="home-page.html" class="menu-link">Startsida</a></h4>
-      <h4 class="menu-item mx-4"><a href="#" class="menu-link">Produkter</a></h4>
-      <h4 class="menu-item mx-4"><a href="../html/om-oss.html" class="menu-link">Om oss</a></h4>
-    </div>
-
+  
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Sök på en produkt..." aria-label="Search">
+        <button class="btn btn-outline-primary" type="submit">Sök</button>
+      </form>
+      
+  </nav>
+  <div class="container pt-5">
     <!-- Produkerna listas här -->
     <h2 id="product-page">Produkter</h2>
     <div class="row" id="product-list">
