fixed om-oss and added footer

--- a/html/om-oss.html
+++ b/html/om-oss.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Om oss</title>
-    <link rel="shortcut icon" href="../favicon.ico" type="favicon.ico">
+    <link rel="shortcut icon" href="../favicon2.ico" type="favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/custom.css">
 </head>
@@ -26,13 +26,19 @@
 
         </div>
 
-        <h1>Om oss</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam facere eius neque optio. Ipsa quisquam
-            ratione quam alias
-            accusantium dolore fuga voluptate repellendus porro a aliquid consequuntur quia, facere dolor.</p>
-    </div>
+        <h1>Group 2shoP-teamet</h1>
+        <div class="row" id="teamProfiles">
+        </div>
     </div>
 
+    <hr>
+    <footer>
+        <div class="container text-center">Copyright &copy; <span id="cRyear"></span>
+        </div>
+    </footer>
+
+    <script src="../js/script.js"></script>
+    <script src="../js/teambuild.js"></script>
 </body>
 
 </html>
