--- a/html/home-page.html
+++ b/html/home-page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsida</title>
-    <link rel="shortcut icon" href="../favicon.ico" type="favicon.ico">
+    <link rel="shortcut icon" href="../favicon2.ico" type="favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/custom.css">
 </head>
@@ -34,6 +34,14 @@
             accusantium dolore fuga voluptate repellendus porro a aliquid consequuntur quia, facere dolor.</p>
     </div>
     </div>
+
+    <hr>
+    <footer>
+        <div class="container text-center">Copyright &copy; <span id="cRyear"></span>
+        </div>
+    </footer>
+
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
