--- a/html/produkter.html
+++ b/html/produkter.html
@@ -1,39 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Webbshop - Produkter</title>
+    <link rel="shortcut icon" href="../favicon2.ico" type="favicon.ico" />
+    <link rel="stylesheet" href="../css/bootstrap.css" />
+    <link rel="stylesheet" href="../css/custom.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Webbshop - Produkter</title>
-  <link rel="shortcut icon" href="../favicon.ico" type="favicon.ico">
-  <link rel="stylesheet" href="../css/bootstrap.css">
-  <link rel="stylesheet" href="../css/custom.css">
-</head>
-
-<body>
-  <div class="container pt-5">
-    <!-- Navbar -->
-    <nav class="navbar navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../html/home-page.html">Webbshop</a>
+  <body>
+    <div class="container pt-5">
+      <!-- Navbar -->
+      <nav class="navbar navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../html/home-page.html">Webbshop</a>
+        </div>
+      </nav>
+      <!-- Meny -->
+      <div class="d-flex justify-content-center align-items-center">
+        <h4 class="menu-item mx-4">
+          <a href="home-page.html" class="menu-link">Startsida</a>
+        </h4>
+        <h4 class="menu-item mx-4">
+          <a href="#" class="menu-link">Produkter</a>
+        </h4>
+        <h4 class="menu-item mx-4">
+          <a href="../html/om-oss.html" class="menu-link">Om oss</a>
+        </h4>
       </div>
-    </nav>
-    <!-- Meny -->
-    <div class="d-flex justify-content-center align-items-center">
-      <h4 class="menu-item mx-4"><a href="home-page.html" class="menu-link">Startsida</a></h4>
-      <h4 class="menu-item mx-4"><a href="#" class="menu-link">Produkter</a></h4>
-      <h4 class="menu-item mx-4"><a href="../html/om-oss.html" class="menu-link">Om oss</a></h4>
+
+      <!-- Produkerna listas här -->
+      <h2 id="product-page">Produkter</h2>
+      <div class="row" id="product-list"></div>
     </div>
 
-    <!-- Produkerna listas här -->
-    <h2 id="product-page">Produkter</h2>
-    <div class="row" id="product-list">
-    </div>
-  </div>
+    <hr />
+    <footer>
+      <div class="container text-center">
+        Copyright &copy; <span id="cRyear"></span>
+      </div>
+    </footer>
 
-  <script src="../js/script.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-</body>
-
+    <script src="../js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
