Minor adjustments to navbar

--- a/html/order.html
+++ b/html/order.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark">
     <div class="container-fluid"> 
-        <a class="navbar-brand" href="home-page.html"><img src="/favicon.ico" alt="Logo" height="80"></a>
+        <a class="navbar-brand" href="home-page.html"><img src="/logo2tr.png" alt="Logo" height="80"></a>
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
