fixed merge issue

--- a/html/om-oss.html
+++ b/html/om-oss.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark">
       <div class="container-fluid"> 
-          <a class="navbar-brand" href="home-page.html"><img src="/logo2tr.png" alt="Logo" height="80"></a>
+          <a class="navbar-brand" href="home-page.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
   
           <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
@@ -35,11 +35,11 @@
       </form>
       
   </nav>
-
+  <div class="container pt-5">
         <h1>Group 2shoP-teamet</h1>
         <div class="row" id="teamProfiles">
         </div>
-
+  </div>
     <hr>
     <footer>
         <div class="container text-center">Copyright &copy; <span id="cRyear"></span>
