--- a/html/order.html
+++ b/html/order.html
@@ -5,39 +5,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beställningsformulär</title>
-  <link rel="shortcut icon" href="../favicon2.ico" type="favicon.ico">
+  <link rel="shortcut icon" href="../favicon.ico" type="favicon.ico">
   <link rel="stylesheet" href="../css/bootstrap.css">
   <link rel="stylesheet" href="../css/custom.css">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm navbar-dark">
-    <div class="container-fluid"> 
-        <a class="navbar-brand" href="home-page.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
-
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="home-page.html">Hem</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="produkter.html">Produkter</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="om-oss.html">Om oss</a>
-              </li>
-            </ul>
-
-    </div>
-
-    <form class="d-flex" role="search">
-      <input class="form-control me-2" type="search" placeholder="Sök på en produkt..." aria-label="Search">
-      <button class="btn btn-outline-primary" type="submit">Sök</button>
-    </form>
-    
-</nav>
-
   <div class="container pt-5">
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../html/home-page.html">Webbshop</a>
+      </div>
+    </nav>
+
+    <!-- Meny -->
+    <div class="d-flex justify-content-center align-items-center">
+      <h4 class="menu-item mx-4"><a href="home-page.html" class="menu-link">Startsida</a></h4>
+      <h4 class="menu-item mx-4"><a href="../html/produkter.html" class="menu-link">Produkter</a></h4>
+      <h4 class="menu-item mx-4"><a href="../html/om-oss.html" class="menu-link">Om oss</a></h4>
+    </div>
 
     <hr>
     <!-- Beställningsformulär -->
@@ -45,8 +33,8 @@
     <div class="form-container">
       <form id="order-form" action="bekräftelse.html" method="post" class="needs-validation" novalidate>
         <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8 mb-2">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 mb-2">
         <label for="namn" class="form-label">Namn</label>
         <input type="namn" name="namn" id="namn" placeholder="Förnamn Efternamn" class="form-control" maxlength="50">
         <div class="invalid-feedback">
@@ -55,8 +43,8 @@
         </div>
         </div>
         <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8 mb-2">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 mb-2">
         <label for="telefon" class="form-label">Telefonnummer</label>
         <input type="telefon" name="telefon" id="telefon" placeholder="Telefonnummer" class="form-control" maxlength="50">
         <div class="invalid-feedback">
@@ -65,8 +53,8 @@
         </div>
         </div>
         <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8 mb-2">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 mb-2">
         <label for="email" class="form-label">Email</label>
         <input type="email" name="email" id="email" placeholder="name@example.com" class="form-control" maxlength="50">
         <div class="invalid-feedback">
@@ -75,8 +63,8 @@
         </div>
         </div>
         <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8 mb-2">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 mb-2">
         <label for="namn" class="form-label">Leveransadress</label>
         <input type="adress" name="Leveransadress" id="adress" placeholder="Gatuadress Postnummer Ort" class="form-control" maxlength="107">
         <div class="invalid-feedback">
@@ -86,7 +74,7 @@
         </div>
 
         <div class="btn-wrapper">
-          <button class="btn btn-primary" type="submit" value="Skicka" id="send">Beställ</button>
+          <button class="btn btn-primary disabled" type="submit" value="Skicka" id="send">Beställ</button>
         </div>
       </form>
     </div>
@@ -119,13 +107,6 @@
       </div>
     </div>
   </div>
-
-  <hr>
-  <footer>
-    <div class="container text-center">Copyright &copy; <span id="cRyear"></span>
-    </div>
-</footer>
-
   <script src="../js/main.js"></script>
   <script src="../js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
