adds offcanvas description

--- a/html/produkter.html
+++ b/html/produkter.html
@@ -12,6 +12,18 @@
 </head>
 
 <body>
+  <!--offcanvas-->
+  <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvas-product" aria-labelledby="offcanvas-product-title">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvas-product-title">Offcanvas title</h5>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div id="offcanvas-product-description" class="offcanvas-body">
+      Offcanvas product description.
+    </div>
+  </div>
+
+
   <div class="container pt-5">
     <!-- Navbar -->
     <nav class="navbar navbar-dark">
