Modal code moved to main.js and other small changes

--- a/html/order.html
+++ b/html/order.html
@@ -31,7 +31,7 @@
     <!-- Beställningsformulär -->
     <h3 style="text-align: center;">Beställningsformulär</h3>
     <div class="form-container">
-      <form id="order-form" action="bekräftelse.html" method="post" class="needs-validation" novalidate>
+      <form id="order-form" method="post" class="needs-validation" novalidate>
         <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8 mb-2">
@@ -93,7 +93,6 @@
             <p style="font-size: 30px;">Produkt: </p>
             <p><span id="modalProductName"></p></span>
             <p><span id="modalProductPrice"></span></p>
-            <p><span id="modalProductDescription"></span></p><br>
             <p style="font-size: 30px;">Leveransadress: </p>
             <p><span id="modalName"></span></p>
             <p><span id="modalAddress"></span></p>
@@ -107,10 +106,9 @@
       </div>
     </div>
   </div>
-  <script src="../js/main.js"></script>
-  <script src="../js/script.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+<script src="../js/main.js"></script>
+<script src="../js/script.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
