--- a/html/om-oss.html
+++ b/html/om-oss.html
@@ -11,30 +11,29 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark">
-      <div class="container-fluid"> 
-          <a class="navbar-brand" href="home-page.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
-  
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="home-page.html">Hem</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="produkter.html">Produkter</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="om-oss.html">Om oss</a>
-                </li>
-              </ul>
+
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid"> 
+            <a class="navbar-brand" href="home-page.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="collapse">
+                <ul class="navbar-nav me-auto">
+                  <li class="nav-item">
+                    <a class="nav-link" href="home-page.html">Hem</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="produkter.html">Produkter</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="om-oss.html">Om oss</a>
+                  </li>
+                </ul>
+        </div>
       </div>
-  
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Sök på en produkt..." aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Sök</button>
-      </form>
-      
-  </nav>
+    </nav>
+
   <div class="container pt-5">
         <h1>Group 2shoP-teamet</h1>
         <div class="row" id="teamProfiles">
@@ -48,5 +47,6 @@
 
     <script src="../js/script.js"></script>
     <script src="../js/teambuild.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
