--- a/html/home-page.html
+++ b/html/home-page.html
@@ -10,42 +10,43 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="home-page.html"
-          ><img src="../logo2tr.png" alt="Logo" height="80"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#collapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse" id="collapse">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="home-page.html"
-                >Hem</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="produkter.html">Produkter</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="om-oss.html">Om oss</a>
-            </li>
-          </ul>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="home-page.html"
+            ><img src="../logo2tr.png" alt="Logo" height="80"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#collapse"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="navbar-collapse collapse" id="collapse">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="home-page.html"
+                  >Hem</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="produkter.html">Produkter</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="om-oss.html">Om oss</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-
+      </nav>
+    </div>
     <div class="container pt-5 text-center custom-bg-col">
       <div class="startPageImage">
         <img
