--- a/html/order.html
+++ b/html/order.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid"> 
         <a class="navbar-brand" href="home-page.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
@@ -32,7 +33,7 @@
     </div>
   </div>
 </nav>
-  
+  </div>
   <div class="container pt-5">
 
     <hr>
