--- a/html/produkter.html
+++ b/html/produkter.html
@@ -13,26 +13,27 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid"> 
-        <a class="navbar-brand" href="home-page.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="navbar-collapse collapse" id="collapse">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="home-page.html">Hem</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="produkter.html">Produkter</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="om-oss.html">Om oss</a>
-              </li>
-            </ul>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="home-page.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="collapse">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="home-page.html">Hem</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="produkter.html">Produkter</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="om-oss.html">Om oss</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <div class="container pt-5">
     <!-- Produkerna listas här -->
@@ -59,7 +60,7 @@
 
   <script src="../js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
