--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="home-page.html"
+          <a class="navbar-brand" href="index.html"
             ><img src="../logo2tr.png" alt="Logo" height="80"
           /></a>
           <button
@@ -32,7 +32,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="home-page.html"
+                  href="index.html"
                   >Hem</a
                 >
               </li>
