--- a/html/om-oss.html
+++ b/html/om-oss.html
@@ -13,7 +13,7 @@
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="home-page.html"
+          <a class="navbar-brand" href="index.html"
             ><img src="../logo2tr.png" alt="Logo" height="80"
           /></a>
           <button
@@ -29,7 +29,7 @@
           <div class="navbar-collapse collapse" id="collapse">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="home-page.html">Hem</a>
+                <a class="nav-link" href="index.html">Hem</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="produkter.html">Produkter</a>
