--- a/html/order.html
+++ b/html/order.html
@@ -14,14 +14,14 @@
   <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid"> 
-        <a class="navbar-brand" href="home-page.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
+        <a class="navbar-brand" href="index.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse" id="collapse">
             <ul class="navbar-nav me-auto">
               <li class="nav-item">
-                <a class="nav-link" href="home-page.html">Hem</a>
+                <a class="nav-link" href="index.html">Hem</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="produkter.html">Produkter</a>
