--- a/om-oss.html
+++ b/om-oss.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Om oss</title>
-    <link rel="shortcut icon" href="../favicon2.ico" type="favicon.ico" />
-    <link rel="stylesheet" href="../css/bootstrap.css" />
-    <link rel="stylesheet" href="../css/custom.css" />
+    <link rel="shortcut icon" href="favicon2.ico" type="favicon.ico" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/custom.css" />
   </head>
 
   <body>
@@ -14,7 +14,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"
-            ><img src="../logo2tr.png" alt="Logo" height="80"
+            ><img src="logo2tr.png" alt="Logo" height="80"
           /></a>
           <button
             class="navbar-toggler"
@@ -58,8 +58,8 @@
       </div>
     </footer>
 
-    <script src="../js/script.js"></script>
-    <script src="../js/teambuild.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/teambuild.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
