--- a/order.html
+++ b/order.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beställningsformulär</title>
-  <link rel="shortcut icon" href="../favicon2.ico" type="favicon.ico">
-  <link rel="stylesheet" href="../css/bootstrap.css">
-  <link rel="stylesheet" href="../css/custom.css">
+  <link rel="shortcut icon" href="favicon2.ico" type="favicon.ico">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/custom.css">
 </head>
 
 <body>
   <div class="container">
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid"> 
-        <a class="navbar-brand" href="index.html"><img src="../logo2tr.png" alt="Logo" height="80"></a>
+        <a class="navbar-brand" href="index.html"><img src="logo2tr.png" alt="Logo" height="80"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -120,8 +120,8 @@
     <div class="container text-center">Copyright &copy; <span id="cRyear"></span>
     </div>
 </footer>
-<script src="../js/main.js"></script>
-<script src="../js/script.js"></script>
+<script src="js/main.js"></script>
+<script src="js/script.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
