--- a/produkter.html
+++ b/produkter.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webbshop - Produkter</title>
-    <link rel="shortcut icon" href="../favicon2.ico" type="favicon.ico" />
-    <link rel="stylesheet" href="../css/bootstrap.css" />
-    <link rel="stylesheet" href="../css/custom.css" />
-    <link rel="stylesheet" href="../css/product.css" />
+    <link rel="shortcut icon" href="favicon2.ico" type="favicon.ico" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/custom.css" />
+    <link rel="stylesheet" href="css/product.css" />
   </head>
 
   <body>
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"
-            ><img src="../logo2tr.png" alt="Logo" height="80"
+            ><img src="logo2tr.png" alt="Logo" height="80"
           /></a>
           <button
             class="navbar-toggler"
@@ -69,7 +69,7 @@
       </div>
     </div>
      </div>
-  <script src="../js/script.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
